Revert outgoing message row to row-reverse for correct right-aligned avatar placement

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -291,7 +291,7 @@
 }
 
 .message-row.me {
-    justify-content: flex-end;
+    flex-direction: row-reverse;
 }
 
 .msg-avatar {
